# ESP32S3-CAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  button.c  button.h  button_espnow_test.c  button_espnow_test.h  button_mcpwm_test.c  button_mcpwm_test.h  catapult_controller.c  catapult_controller.h  device_settings.c  device_settings.h  eeprom.c  eeprom.h  espnow.c  espnow.h  goalkeeper_controller.c  goalkeeper_controller.h  info.h  info_advanced.h  laser.c  laser.h  led_strip_encoder.c  led_strip_encoder.h  logging.h  main.c  mathop.c  mathop.h  mem_probe.c  mem_probe.h  motor.c  motor.h  motor_controller.c  motor_controller.h  musical_frequencies.h  packets.h  pid.c  pid.h  pindef.h  power.c  power.h  (+18 more)
main/music/: badapple.h  castle.h  custom.h  twinkle.h
