idf_component_register(SRCS "catapult_controller.c" "goalkeeper_controller.c" "device_settings.c" "power.c" "eeprom.c" "laser.c" "pid.c" "ringbuffer.c" "tof_sensor.c" "espnow.c" "mathop.c" "motor.c" "mem_probe.c" "main.c" "button.c" "servo.c" "ws2812.c" "led_strip_encoder.c" "rssi.c" "motor_controller.c"
                    INCLUDE_DIRS ".")
